Update iframe height in index.html
Adjusted iframe height to 80vh for better layout.

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
                 .navbar {
                     flex-direction: column;
                     align-items: flex-start;
+                    
                 }
 
                 .logo img {
@@ -127,10 +128,12 @@
                     width: 100%;
                     gap: 10px;
                     margin-left: 0;
+                    align-items: center;
                 }
 
                 .menu li {
                     width: 100%;
+                    font-size: 16px;
                 }
                 
                 .menu a {
@@ -188,8 +191,9 @@
                 name="onglet"
                 src="home.html"
                 width="100%"
-                height="100%"
+                height="80vh"
                 style="border:none">
             </iframe>
         </main>       
+
 </html> 
