--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <header>
             <nav class="navbar">
                 <div class="logo">
-                    <img src="/Users/dalou/SiteWeb/images/logo.png">
+                    <img src="images/logo.png">
                 </div>
                 <ul class="menu">
                     <li><a href="home.html" target="onglet">Home</a></li>
@@ -197,3 +197,4 @@
         </main>       
 
 </html> 
+
