Refactor index.html for improved layout and responsiveness
Updated HTML structure and styles for better layout and responsiveness.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
                 align-items: center;
                 flex-wrap: wrap;
             }
+            nav ul{ 
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
 
         /* Logo */
             .logo img {
@@ -117,6 +121,11 @@
                     align-items: flex-start;
                     
                 }
+                nav ul{
+                    flex-direction: column;
+                    align-items: flex-start;
+                }
+                    
 
                 .logo img {
                     height: 55px;
@@ -191,11 +200,12 @@
                 name="onglet"
                 src="home.html"
                 width="100%"
-                height="80vh"
+                height="100vh"
                 style="border:none">
             </iframe>
         </main>       
 
 </html> 
+
 
 
