Refactor equipe.html structure and styles

--- a/equipe.html
+++ b/equipe.html
@@ -16,8 +16,10 @@
         body {
             margin: 0;
             padding: 0;
+            height: 100%;
             background-color: #6b4a3a; /* marron du fond */
             font-family: 'Montserrat', sans-serif;
+            min-height: 100vh;
         }
 
         .titre {
@@ -355,6 +357,7 @@
     </div>
 </body>
 </html>
+
 
 
  
