--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
                 flex: 1;
                 width: 100%;
                 border: none;
+                min-height: 100vh;
             }
 
             /* 📱 RESPONSIVE */
@@ -206,6 +207,7 @@
         </main>       
 
 </html> 
+
 
 
 
