Refactor index.html structure and styles

--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <title>Les Roues de l'Espoir</title> 
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <style>
-        * {
-            box-sizing: border-box;
-        }
+        * { box-sizing: border-box; }
 
         html, body {
             margin: 0;
@@ -24,7 +22,7 @@
             flex-direction: column;
             height: 100vh;
             overflow: hidden;
-            background-color: #f4eadf; /* couleur de fond uniforme */
+            background-color: #f4eadf; /* fond uniforme */
         }
 
         header {
@@ -48,13 +46,11 @@
             margin: 0;
         }
 
-        /* Logo */
         .logo img {
             height: 70px;
             width: auto;
         }
 
-        /* Menu principal */
         .menu {
             display: flex;
             list-style: none;
@@ -63,9 +59,7 @@
             padding: 0;
         }
 
-        .menu li {
-            position: relative; /* nécessaire pour le dropdown */
-        }
+        .menu li { position: relative; }
 
         .menu a {
             text-decoration: none;
@@ -77,11 +71,8 @@
             letter-spacing: 1.5px;
         }
 
-        .menu a:hover {
-            color: #626F54;
-        }
+        .menu a:hover { color: #626F54; }
 
-        /* Dropdown menu */
         .dropdown-menu {
             display: none;
             position: absolute;
@@ -95,9 +86,7 @@
             min-width: 180px;
         }
 
-        .dropdown-menu li {
-            padding: 0;
-        }
+        .dropdown-menu li { padding: 0; }
 
         .dropdown-menu a {
             display: block;
@@ -105,28 +94,23 @@
             font-weight: normal;
             color: #5a3a28;
             font-size: 16px;
-            letter-spacing: 1px;
         }
 
-        .dropdown:hover .dropdown-menu {
-            display: block;
-        }
+        .dropdown:hover .dropdown-menu { display: block; }
 
-        main {
-            flex: 1;
-            min-height: 0;
-        }
+        main { flex: 1; min-height: 0; }
 
         iframe {
             flex: 1;
             width: 100%;
             border: none;
             min-height: 0;
+            background-color: #f4eadf;
         }
 
         /* BOUTON HAMBURGER ET MENU MOBILE */
         .hamburger {
-            display: none; /* caché sur desktop */
+            display: none;
             flex-direction: column;
             gap: 5px;
             padding: 10px;
@@ -145,16 +129,16 @@
         .mobile-menu {
             position: fixed;
             top: 0;
-            right: -100%; /* caché par défaut */
-            width: 50%; /* moitié de page */
+            right: -100%;
+            width: 60%;
             height: 100%;
-            background: rgba(244, 234, 223, 0.95); /* léger transparent */
+            background: rgba(244, 234, 223, 0.95);
             display: flex;
             flex-direction: column;
-            padding: 50px 20px;
+            padding: 100px 20px 20px;
             gap: 20px;
             transition: right 0.3s ease;
-            z-index: 1000;
+            z-index: 1001;
         }
 
         .mobile-menu a {
@@ -164,26 +148,11 @@
             font-size: 18px;
         }
 
-        /* 📱 RESPONSIVE */
         @media (max-width: 768px) {
-
-            .hamburger {
-                display: flex;
-            }
-
-            .navbar {
-                display: flex; /* juste pour afficher le logo */
-                justify-content: flex-start;
-            }
-
-            /* cacher le menu desktop sur mobile */
-            .menu {
-                display: none;
-            }
-
-            .logo img {
-                height: 55px;
-            }
+            .hamburger { display: flex; }
+            .navbar { justify-content: flex-start; }
+            .menu { display: none; }
+            .logo img { height: 55px; }
         }
     </style>
 </head> 
@@ -207,7 +176,7 @@
                     <a href="#">Nos aventures🔻</a>
                     <ul class="dropdown-menu">
                         <li><a href="Brest.html" target="onglet">Orléans/Brest</a></li>
-                        <li><a href="soon.html" target="onglet">soon....</a></li>
+                        <li><a href="soon.html" target="onglet">Soon...</a></li>
                     </ul>
                 </li>
                 <li><a href="blog.html" target="onglet">Blog</a></li>
@@ -217,7 +186,6 @@
         </nav>
     </header> 
 
-    <!-- BOUTON HAMBURGER ET MENU MOBILE -->
     <div class="hamburger" onclick="toggleMenu()">
         <div></div>
         <div></div>
@@ -237,22 +205,14 @@
     </div>
 
     <main>
-        <iframe
-            name="onglet"
-            src="home.html">
-        </iframe>
+        <iframe name="onglet" src="home.html"></iframe>
     </main>
 
     <script>
         function toggleMenu() {
             const menu = document.getElementById('mobileMenu');
-            if(menu.style.right === "0px") {
-                menu.style.right = "-100%";
-            } else {
-                menu.style.right = "0px";
-            }
+            menu.style.right = (menu.style.right === "0px") ? "-100%" : "0px";
         }
     </script>
 </body>
 </html>
-
