--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         main { flex: 1; min-height: 0; }
 
         iframe {
-            flex: 1;
+            height: 100vh;
             width: 100%;
             border: none;
             min-height: 0;
@@ -216,3 +216,4 @@
     </script>
 </body>
 </html>
+
