--- a/equipe.html
+++ b/equipe.html
@@ -26,23 +26,19 @@
             margin: 60px 20px 60px 20px;
         }
 
-        .equipe {
-            display: flex;
-            flex-direction: column;
-            gap: 60px;
-            padding-bottom: 80px;
-        }
+       .equipe {
+    display: flex;
+    flex-direction: column;
+    gap: 60px;
+    padding-bottom: 80px;
+    max-width: 100%; /* au lieu de 900px */
+    margin: auto;
+}
+.membre-gauche, .membre-droite, .centre {
+    max-width: 100%; /* au lieu de 900px */
+    padding: 30px;
+}
 
-        .membre-gauche,.membre-droite, .centre {
-            max-width: 900px;
-            margin: auto;
-            background-color: #f5f1e6;
-            border-radius: 30px;
-            padding: 30px;
-            display: flex;
-            align-items: center;
-            gap: 30px;
-        }
 
         .membre-gauche { flex-direction: row; transform: translateX(-100px); }
         .membre-droite { flex-direction: row-reverse; transform: translateX(100px); }
@@ -255,5 +251,6 @@
     </div>
 </body>
 </html>
+
 
 
