--- a/contact.html
+++ b/contact.html
@@ -33,8 +33,8 @@
             background-color: #f4eadf;
             border-radius: 22px;
             padding: 35px 40px;
-            width: 420px;
-            max-width: 90%;
+            width: 100%;
+            max-width: 600px;
             height: auto;
             box-shadow: 0 15px 35px rgba(0,0,0,0.25);
         }
@@ -205,4 +205,5 @@
     </main>
 </body>
 </html>
+
 
